@@ -3,6 +3,8 @@ Version 0.68
 * Code cleanup.
 * Use Elementree from lxml for easier access via xpath, adjust dependencies *
 * Adjust pylintrc
+* virtnbdrestore: add option -c: attempts to change pathes within restored
+virtual machine config (#54)
 
 Version 0.67
 ---------
